CProgrammierung/eval_pipline/resources/testcases/bad/fail_multiple_dashes.stdin
14g7:77m9x,r3j5uardqwq
1koelpqxjvi3eqcxmnw:77m9x,vgmhqdny17z-296
oou260p:vgmhqdny17z-196
hjwgznu:oou260p
8xqn2k7mq:hjwgznu,uw9agfjx
uutm1vwty:uw9agfjx
80:uutm1vwty,by1so4d7bcyhyacm--91
by1so4d7bcyhyacm:lazqpndtrz6f
fkz6xkk7nc2:lazqpndtrz6f-406
dloa7beyk2e04:fkz6xkk7nc2
9v09yk3cjmvt9g9cc:dloa7beyk2e04-992
5rdrszsnsdj8mqo5:9v09yk3cjmvt9g9cc,ag3cb8y3cfrx2ie5h
ag3cb8y3cfrx2ie5h:i379l2elknvf
i379l2elknvf:ia4bavik7fbm1310k2y
ia4bavik7fbm1310k2y:s0nn9cee7zc0m
s0nn9cee7zc0m:wyu8mlf-737
wyu8mlf:yod72q52h7m5l-749
1u0kat84mrmd:yod72q52h7m5l,bfys-65
bfys:gykcvdg6zt6kwnabg-182
gykcvdg6zt6kwnabg:mcioekjzpaovor
30ugygzg6no:mcioekjzpaovor,fw2td3b5c-669
3l4ur:fw2td3b5c,mgc8ev6bl6-687
mgc8ev6bl6:xdtnqeoce7y57c-283
m2o800wnn0k:xdtnqeoce7y57c,vzbfghad7-48
473ll4dsm:vzbfghad7,pz0u7tx32jhibpo5t6b-359
pz0u7tx32jhibpo5t6b:tdw4olji-231
p2vj1ss2:tdw4olji-384
53ivf5:p2vj1ss2,ichrynz
ichrynz:k9vbkl6-872
i5w3vv21uu9j8l4qa:k9vbkl6,ker9q1vtj87i
ker9q1vtj87i:uzck8vuet4-874
krd08y4rb0pxyq3irsx:uzck8vuet4
acrgw6ssd:krd08y4rb0pxyq3irsx,nfu37w3hcc
nfu37w3hcc:o3635mds26
o3635mds26:qmqhjyg
8jhy3lk8cq3l:qmqhjyg,8ssyf937m
8ssyf937m:r3j5uardqwq
A:krd08y4rb0pxyq3irsx
I:97
